# masages

./: .env  .env.example  .gitignore  ANTI_COPY_SUMMARY.md  FEATURES.md  README.md  SECURITY.md  database.sql  get-ca.js  index.html  messenger.db  messenger.sqbpro  package-lock.json  package.json  script.js  server.js  style.css  tmp_inspect_db.js
e2ee-key-server/: Cargo.toml  README.md
e2ee-key-server/migrations/: 0001_init.sql
e2ee-key-server/src/: auth.rs  config.rs  crypto.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs
public/: index.html  script.js  style.css
